--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
   <title>Vacation Tracker</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="assets/travel.png">
 </head>
 <body>
   <app-root></app-root>
